# demo1

./: .env  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs  tray.rs
src/assets/style/: main.css
src/router/: index.ts
src/views/: about.vue
src/views/menu/: index.ts  index.vue
src/views/msg/: index.vue  msg.ts
src/views/videoTest/: index.vue
src/views/windowProxy/: index.vue
src/windows/: actions.ts  index.ts  notification.ts
test1/: package-lock.json
test1/src/: App.vue
test1/src-tauri/: tauri.conf.json
test1/src-tauri/src/: commands.rs  lib.rs  tray.rs
test1/src/views/menu/: index.ts
test1/src/views/msg/: index.vue  msg.ts
test1/src/windows/: index.ts
